--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "react": "^18.3.1",
@@ -40,3 +41,5 @@
     "vite": "^6.0.5"
   }
 }
+ 
+ 
